--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,29 @@
-pandas>=1.5.0
-pdfplumber>=0.7.0
-numpy>=1.21.0
-openpyxl>=3.0.9
-xlrd>=2.0.1
+blinker==1.9.0
+cffi==1.17.1
+charset-normalizer==3.4.3
+click==8.2.1
+colorama==0.4.6
+cryptography==45.0.6
+et_xmlfile==2.0.0
+Flask==3.1.2
+gunicorn==23.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+mysql-connector==2.2.9
+numpy==2.3.2
+openpyxl==3.1.5
+packaging==25.0
+pandas==2.3.2
+pdfminer.six==20250506
+pdfplumber==0.11.7
+pillow==11.3.0
+pycparser==2.22
+pypdfium2==4.30.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+reportlab==4.4.3
+six==1.17.0
+tzdata==2025.2
+Werkzeug==3.1.3
+xlrd==2.0.2
