--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pdfplumber==0.11.7
 pillow==11.3.0
 pycparser==2.22
 pypdfium2==4.30.0
+PyMySQL==1.1.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
 reportlab==4.4.3
